Add links of github pages

--- a/index.html
+++ b/index.html
@@ -4,9 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Tom Portfolio</title>
+  <title>C&R Portfolio Website</title>
 </head>
 <body>
-Hallo Coco
+<h2>Websites der Teilnehmer</h2>
+<ul>
+  <li>
+    <a href="https://krabby21.github.io/">Florian</a>
+  </li>
+  <li>
+    <a href="https://hendrikfley.github.io/">Hendrik</a>
+  </li>
+  <li>
+    <a href="https://riomos.github.io/">Mario</a>
+  </li>
+  <li>
+    <a href="https://timokue.github.io/">Timo</a>
+  </li>
+  <li>
+    <a href="https://tartarov.github.io">Tim</a>
+  </li>
+  <li>
+    <a href="https://adrosmc.github.io/">Adrian</a>
+  </li>
+</ul>
+<script>
+</script>
 </body>
 </html>
