--- a/index.html
+++ b/index.html
@@ -12,21 +12,31 @@
 <ul>
   <li>
     <a href="https://krabby21.github.io/">Florian</a>
+    <p>Anfang Chapter 2</p>
   </li>
   <li>
     <a href="https://hendrikfley.github.io/">Hendrik</a>
+    <p>Anfang Chapter 2</p>
   </li>
   <li>
     <a href="https://riomos.github.io/">Mario</a>
+    <p>Ende Chapter 1</p>
   </li>
   <li>
     <a href="https://timokue.github.io/">Timo</a>
+    <p>Anfang Chapter 2</p>
   </li>
   <li>
     <a href="https://tartarov.github.io">Tim</a>
+    <p>
+      Schon ein bisschen weiter, Chapter 1-3 ueberflogen
+    </p>
   </li>
   <li>
     <a href="https://adrosmc.github.io/">Adrian</a>
+    <p>
+      Chapter 2
+    </p>
   </li>
 </ul>
 <script>
