Add Christian's page

--- a/index.html
+++ b/index.html
@@ -61,6 +61,10 @@
                 <a href="https://adrosmc.github.io/">Adrian</a>
                 <p>Chapter 2</p>
               </li>
+              <li>
+                <a href="https://c-w-schwind.github.io/c-r_portfolio-exercise/">Christian</a>
+                <p>&mdash;</p>
+              </li>
             </ul>
           </article>
           <article role="tabpanel" hidden id="tab-B">
