--- a/index.html
+++ b/index.html
@@ -39,31 +39,31 @@
             <ul>
               <li>
                 <a href="https://krabby21.github.io/">Florian</a>
-                <p>Anfang Chapter 2</p>
+                <p>✔️🚀</p>
               </li>
               <li>
                 <a href="https://hendrikfley.github.io/">Hendrik</a>
-                <p>Anfang Chapter 2</p>
+                <p>✔️🚀</p>
               </li>
               <li>
                 <a href="https://riomos.github.io/">Mario</a>
-                <p>Ende Chapter 1</p>
+                <p>✔️🚀</p>
               </li>
               <li>
                 <a href="https://timokue.github.io/">Timo</a>
-                <p>Anfang Chapter 2</p>
+                <p>✔️🚀</p>
               </li>
               <li>
                 <a href="https://tartarov.github.io">Tim</a>
-                <p>Schon ein bisschen weiter, Chapter 1-3 ueberflogen</p>
+                <p>✔️🚀</p>
               </li>
               <li>
                 <a href="https://adrosmc.github.io/">Adrian</a>
-                <p>Chapter 2</p>
+                <p>✔️🚀</p>
               </li>
               <li>
                 <a href="https://c-w-schwind.github.io/c-r_portfolio-exercise/">Christian</a>
-                <p>&mdash;</p>
+                <p>✔️🚀</p>
               </li>
             </ul>
           </article>
@@ -86,17 +86,13 @@
         </section>
       </div>
       <div class="status-bar">
-        <p id="next-date-field" class="status-bar-field">next Date: </p>
-        <p class="status-bar-field">Tutorial Progress: Chapter 2</p>
+        <p id="next-date-field" class="status-bar-field">next Date: FINISHED</p>
+        <p class="status-bar-field">Tutorial Progress: DONE</p>
         <p id="cpu-counter" class="status-bar-field">CPU Usage: 14%</p>
       </div>
     </div>
 
     <script>
-      //get next date
-      const nextDateField = document.querySelector("#next-date-field")
-      nextDateField.innerHTML = `next meetup: ${nextDate}`
-
       const closeButton = document.querySelector("#close-main-window");
       closeButton.addEventListener("click", () => window.close());
 
